# waitpid

./: .gitattributes  .gitignore  Makefile.am  README  configure.ac  describe  dist.sh  mingw.mutex.h  release.sh  waitpid.1.in  waitpid.cpp  waitpid.rc  waitpid.rc.in
build-aux/: cleanflags.sh  report.ac
m4/: cleanflags.m4  cxxflag_add.m4  flag_add.m4
